--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "license": "GPL-3.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -8,10 +9,22 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.8.2",
+    "@nuxt/image-edge": "^1.0.0-27919678.2f5b64b",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@pinia/nuxt": "^0.4.6",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.1.0",
+    "pinia": "^2.0.30",
     "postcss": "^8.4.19",
     "sass": "^1.56.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vue-i18n": "^9.2.2"
+  },
+  "dependencies": {
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/open-sans": "^4.5.14",
+    "@iconify-prerendered/vue-fa6-brands": "^0.21.1675839446",
+    "@iconify-prerendered/vue-fa6-solid": "^0.21.1675839484"
   }
 }
